--- a/.github/workflows/asciidoctor-pages.yml
+++ b/.github/workflows/asciidoctor-pages.yml
@@ -4,9 +4,9 @@ name: GitHub Pages Publish
 # events but only for the master branch
 on:
   push:
-    branches: [ master, main ]
+    branches: [ main ]
   pull_request:
-    branches: [ master, main ]
+    branches: [ main ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -22,7 +22,7 @@ jobs:
       
     # Includes the AsciiDoctor GitHub Pages Action to convert adoc files to html and publish to gh-pages branch
     - name: asciidoctor-ghpages
-      uses: manoelcampos/asciidoctor-ghpages-action@v2.2.4
+      uses: nullniverse/asciidoctor-ghpages-action@v2.2.4
       with:
         pdf_build: true
         # asciidoctor_params: --attribute=nofooter
